# rusty_chess

./: Cargo.toml
.github/workflows/: ci.yaml  release.yaml
src/: board.rs  board_move.rs  board_piece.rs  board_position.rs  board_position_marker.rs  board_side_effects.rs  board_ui_factory.rs  game.rs  main.rs  pawn.rs  pieces.rs
src/pieces/: bishop.rs  color.rs  diagonal_mover.rs  factory.rs  horizontal_vertical_mover.rs  king.rs  knight.rs  mod.rs  pawn.rs  piece_type.rs  queen.rs  rook.rs
