[package]
name = "rusty-chess"
version = "0.1.0"
edition = "2021"

[features]
debug = ["bevy-inspector-egui"]

[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
thiserror = "1.0"
bevy = "0.14"
bevy_mod_picking = "0.20.1"
bevy-inspector-egui = { version = "0.25.1", optional = true }
